modified:   frontend/src/app/app.ts 	modified:   frontend/src/app/components/match-found/match-found.ts 	modified:   frontend/src/app/components/queue/queue.ts 	modified:   frontend/src/app/services/api.ts 	deleted:    src/main/java/br/com/lolmatchmaking/backend/controller/MatchController.java 	new file:   src/main/java/br/com/lolmatchmaking/backend/controller/MatchFoundController.java 	modified:   src/main/java/br/com/lolmatchmaking/backend/controller/MatchQueueController.java 	modified:   src/main/java/br/com/lolmatchmaking/backend/controller/QueueController.java 	modified:   src/main/java/br/com/lolmatchmaking/backend/scheduled/MatchmakingScheduledTasks.java 	modified:   src/main/java/br/com/lolmatchmaking/backend/service/MatchFoundService.java 	modified:   src/main/java/br/com/lolmatchmaking/backend/service/MatchQueueService.java 	modified:   src/main/java/br/com/lolmatchmaking/backend/service/QueueManagementService.java